# komodo-defi-sdk-flutter

./: .gitignore  .gitmodules  .metadata  ACTIVATION_PARAMS_REFACTORING_PLAN.md  CHANGELOG.md  CMakeCache.txt  Fetching  LEGACY_ACTIVATION_SOLUTION.md  MERCHANT_BRIEF.md  PR_484_code_changes.patch  README.md  analysis_options.yaml  build.yaml  concat.sh  ffigen.yaml  index_generator_template.yaml  melos.yaml  production_checklist.md  pubspec.yaml  sample_project_structure.md  test_fix.dart  tutorial_overview.md  tutorial_script.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  flutter-tests.yml  kdf-version-roll.yml  unit-tests-on-pr.yml  validate-code-guidelines.yml
android/: build.gradle
app_build/: build_config.json  build_config.schema.json
docs/: STREAMING_DATA_MANAGER.md  act-local-testing.md  automated-pubdev-publishing-plan.md
docs/firebase/: firebase-deployment-setup.md
docs/flutter/: flutter docs at master
docs/tech_debt/: Activation_and_ZHTLC_Tech_Debt.md  PR227_ZHTLC_Tech_Debt.md
docs/tutorials/: README.md  tutorial-overview.md  (+2 more)
example/: .gitignore  pre-deploy.dart  pubspec.yaml
ios/: komodo_defi_framework.podspec  mm2_plugin.podspec
komodo_wallet_cli/: pubspec.yaml
lib/: komodo_defi_framework.dart  komodo_defi_framework_bindings_generated.dart
macos/: komodo_defi_framework.podspec
playground/: .firebaserc  .gitignore  README.md  analysis_options.yaml  firebase.json  pubspec.yaml  pubspec_overrides.yaml
src/: CMakeLists.txt  komodo_defi_framework.c
test_units/: main.dart
windows/: CMakeLists.txt
(+136 files in other folders)
